# dayProjects

./: handler.py  readme.md
handler_scripts/: _exceptions.py  _terminal_colors.py  install.py  startproject.py  syncprojects.py
project_art_generator/: .gitignore  app.py  index.html  requirements.in
project_crawler/: crawler.py  pyproject.toml  readme.md  requirements.in  run.py
project_drawing/: .gitignore  readme.md  requirements.in  run.py  scraper.py
